--- a/src/main.css
+++ b/src/main.css
@@ -9,9 +9,14 @@
   height: inherit;
 }
 
+body {
+  overflow: hidden;
+  margin: 0 auto;
+  padding-left: 15px;
+}
+
 div.gridcontainer {
   margin: 1rem;
-  height: 100vh;
   display: grid;
   grid-gap: 1rem;
   grid-template: repeat(auto-fit, 130px) / repeat(auto-fit, 130px) ;
